rlox_bin/tests/snapshots/test__comp_errors__invalid_break.snap
---
source: rlox/tests/test.rs
assertion_line: 19
expression: output
---

  × Break statement cannot be used outside of loop
   ╭────
 1 │ break;
   · ──────
   ╰────


