rlox_bin/tests/snapshots/test__comp_errors__print.snap
---
source: rlox/tests/test.rs
assertion_line: 21
expression: output
---

  × Unexpected Token 1
   ╭────
 1 │ print 1
   ·       ─
   ╰────


